--- a/views/customer/auth/login.ejs
+++ b/views/customer/auth/login.ejs
@@ -10,6 +10,8 @@
    
     <form action="/login" method="POST">
 
+        <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
+
     <p>
         <label for="email">E-Mail</label>
         <input type="email" id="email" name="email" required>
